--- a/paper/library.bib
+++ b/paper/library.bib
@@ -47,7 +47,7 @@
 
 @Article{scoringutils,
   title = {Evaluating Forecasts with scoringutils in R},
-  author = {Nikos I. Bosse and Hugo Gruson and Anne Cori and Edwin {van Leeuwen} and Sebastian Funk and Sam Abbott},
+  author = {Bosse, Nikos I. and Gruson, Hugo and Cori, Anne and {van Leeuwen}, Edwin and Funk, Sebastian and Abbott, Sam},
   journal = {arXiv},
   url = {https://arxiv.org/abs/2205.07090},
   year = {2022},
